Connect API to admin page
